<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    tools:targetApi="jelly_bean_mr1">

    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:elevation="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/image_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layerType="software"
                    ads:civ_border_width="1dp"
                    ads:civ_border_color="@color/colorAccent"
                    />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/upload_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/done"
                    ads:fabSize="mini"
                    android:textColor="@color/white"
                    android:visibility="gone" />


            </LinearLayout>

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:hint="@string/nameTitle"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/textColor" />



            <TextView
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:hint="@string/email"
                android:paddingTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/textColor" />
            <TextView
                android:id="@+id/scoreTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/scoreTitle"
                android:paddingTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/textColor" />
            <TextView
                android:id="@+id/scores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/scoreTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/textColor" />


        </LinearLayout>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/admob_banner_unit_id" />
</LinearLayout>
