<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:layoutDirection="ltr"
    android:orientation="vertical"

    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/question_background"

        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal|center_vertical"
            android:layoutDirection="rtl"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/questionNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:background="@drawable/item_background"
                android:gravity="center_horizontal|center_vertical"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:text="0 / 0"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/level_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:background="@drawable/item_background"
                android:drawableEnd="@drawable/score"
                android:drawablePadding="15dp"
                android:gravity="center_horizontal|center_vertical"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                android:text="0"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                tools:ignore="RtlCompat" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/questionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:scrollbars="vertical"
                android:textColor="@color/textColor2"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/questionImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:maxHeight="200dp"
                />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/answerGridview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:columnWidth="40dp"
            android:horizontalSpacing="4dp"
            android:padding="4dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:scrollbars="none"
            android:verticalSpacing="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/reveal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border_background"
                android:drawableLeft="@drawable/reveal"
                android:drawablePadding="-5dp"
                android:padding="5dp"
                android:text="@string/show_answer"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <ImageButton
                android:id="@+id/reset"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                android:background="@drawable/reset_skip_background"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/reset" />

            <ImageButton
                android:id="@+id/skip"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                android:background="@drawable/reset_skip_background"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/skip" />


            <Button
                android:id="@+id/ask"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border_background"
                android:drawableRight="@drawable/friends" android:padding="5dp"
                android:text="@string/askfriends"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

<!--        <GridView-->
<!--            android:id="@+id/choicesGridview"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="5dp"-->
<!--            android:columnWidth="40dp"-->
<!--            android:horizontalSpacing="4dp"-->
<!--            android:numColumns="auto_fit"-->
<!--            android:padding="4dp"-->
<!--            android:scrollbars="none"-->
<!--            android:stretchMode="columnWidth"-->
<!--            android:verticalSpacing="4dp" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:orientation="vertical">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/choicesGridview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:columnWidth="40dp"
                android:padding="4dp"
                android:scrollbars="none"
                android:layout_gravity="center"
                android:gravity="center"

                />

    </LinearLayout>
        <Button
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/pressed_no_corners"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/admob_banner_unit_id" />
</LinearLayout>